--- a/src/pages/Board/components/List/list.scss
+++ b/src/pages/Board/components/List/list.scss
@@ -7,9 +7,9 @@
 
 @mixin card-style {
   height: 30px;
-  font-size: 16px;
   border-radius: 8px;
   cursor: pointer;
+  font-size: 16px;
 }
 
 .list {
@@ -38,6 +38,8 @@
 
   &__card {
     @include card-style;
+    margin-bottom: 16px;
+    margin-top: 8px;
     background-color: var(--secondary-color);
     padding-left: 16px;
     width: 200px;
@@ -64,7 +66,6 @@
         background-color: var(--tertiary-color);
       }
       border: 2px solid var(--tertiary-color);
-
     }
   }
 
