--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+#nprogress .bar {
+  background: var(--color-info) !important;
+  height: 10px !important;
+  box-shadow: 0 0 8px var(--color-info);
+}
+
+.Toastify__toast {
+  color: var(--color-text) !important;
+}
+
 .App {
   text-align: center;
 }
