--- a/src/pages/Home/components/Board/board.scss
+++ b/src/pages/Home/components/Board/board.scss
@@ -1,8 +1,10 @@
+@import 'src/styles/variables.scss';
+
 .square {
   width: 200px;
   height: 100px;
-  border-radius: 8px;
-  border: 2px solid black;
+  border-radius: var(--border-radius-primary);
+  border: 2px solid var(--color-text);
   cursor: pointer;
 }
 
@@ -11,5 +13,5 @@
   padding-left: 8px;
   padding-right: 8px;
   font-style: oblique;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-family-primary), serif;
 }
