refactor(styles): Перенесено всі SCSS-файли до module.scss для модульного стилювання

--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -1,4 +1,4 @@
-@import 'src/styles/mixins.scss';
+@import '../../styles/mixins.module';
 
 body {
   background-image: url('../../../public/images/clouds.jpg');
