--- a/src/pages/Board/components/List/list.module.scss
+++ b/src/pages/Board/components/List/list.module.scss
@@ -1,5 +1,5 @@
-@import 'src/styles/variables.scss';
-@import 'src/styles/mixins.scss';
+@import '../../../../styles/variables.module';
+@import '../../../../styles/mixins.module';
 
 .list {
   background-color: var(--color-primary);
